Add guests arg to app.py to get guest info displaying in view_rsvp, amend jinja template on form to iterate over starter options in form select

--- a/templates/add_guest.html
+++ b/templates/add_guest.html
@@ -27,24 +27,24 @@
         <label>Starter</label>
         <select id="starter" name="starter" class="browser-default custom-select mb-4">
             <option value="" selected>Choose your starter</option>
-            {% for starter in starters %}
-                <option value="{{ food_choices.starter }}">{{ food_choices.starter }}</option>
+            {% for starter in food_choices %}
+                <option value="{{ starter.starter }}">{{ starter.starter }}</option>
             {% endfor %}
         </select>
 
         <label>Main</label>
         <select id="main" name="main" class="browser-default custom-select mb-4">
             <option value="" selected>Choose your main</option>
-            {% for main in mains %}
-                <option value="{{ food_choices.main }}">{{ food_choices.main }}</option>
+            {% for main in food_choices %}
+                <option value="{{ main.main }}">{{ main.main }}</option>
             {% endfor %}
         </select>
 
         <label>Dessert</label>
         <select id="dessert" name="dessert" class="browser-default custom-select mb-4">
             <option value="" selected>Choose your dessert</option>
-            {% for dessert in desserts %}
-                <option value="{{ food_choices.dessert }}">{{ food_choices.dessert }}</option>
+            {% for dessert in food_choices %}
+                <option value="{{ dessert.dessert }}">{{ dessert.dessert }}</option>
             {% endfor %}
         </select>
 
