--- a/templates/view_rsvp.html
+++ b/templates/view_rsvp.html
@@ -2,56 +2,64 @@
 {% block content %}
 
     {% if count_guests == 0 %}
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="card center-align text-dark">
-                        <div class="card-body">
-                            <h3 class="card-title p-3">No Guests</h3>
-                            <p>
-                                You haven't added any guests. Add a guest to confirm their attendance and submit your RSVP. 
-                            </p>
-                            <p>
-                                After you have added a guest, come here to view/edit your RSVP. 
-                            </p> 
-                            <button class="btn"> <a href="{{ url_for('add_guest', user_id=user_id)}}" title="Add Guest" 
-                            aria-label="Add Guest">Add Guest</a></button>   
-                        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="card center-align text-dark">
+                    <div class="card-body">
+                        <h3 class="card-title p-3">No Guests</h3>
+                        <p>
+                            You haven't added any guests. Add a guest to confirm their attendance and submit your RSVP.
+                        </p>
+                        <p>
+                            After you have added a guest, come here to view/edit your RSVP.
+                        </p>
+                        <button class="btn"> <a href="{{ url_for('add_guest', user_id=user_id)}}" title="Add Guest"
+                                aria-label="Add Guest">Add Guest</a></button>
                     </div>
                 </div>
             </div>
         </div>
-    
+    </div>
+
     {% else %}
-        <div class="container">
-            <div class="row row-cols-1 row-cols-md-2 g-4">
-                <form action="{{ url_for('view_rsvp', guest_id=guest_id, user_id=user_id)}}" method="POST" class="row">
-                    <div class="col" id="">
-                        {% if count_guests >= 1 %}
-                            <div class="card center-align text-dark">
-                                {% for guest in guests %}
-                                    <div class="card-body">
-                                        <h3 class="card-title p-3">{{ guest.full_name }}</h3>
-                                    </div>
-                                {% endfor %}
-                                </select>
-                            </div>
-                        {% endif %}
-                    </div>
-                </form>
-                <div class="col s12">
-                    <div class="col s12 m3">
-                        <div class="row">
-                            <div class="col s12">
-                                <div class="">
-                                    <a href="{{ url_for('add_guest', user_id=user_id)}}" title="Add Guest" class="" aria-label="Add Guest">Add Guest</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <div class="">
+                    <a href="{{ url_for('add_guest', user_id=user_id)}}" title="Add Guest" class=""
+                        aria-label="Add Guest">Add Guest</a>
                 </div>
             </div>
         </div>
+        <div class="row d-flex flex-row">
+            <form action="{{ url_for('view_rsvp', guest_id=guest_id, user_id=user_id)}}" method="POST" class="row">
+                <div class="col mb-4 text-dark justify-content-start" id="">
+                    {% if count_guests >= 1 %}
+                    <div class="card-deck">
+                        {% for guest in guests %}
+                        <div class="card">
+                            <div class="card-body">
+                              <h5 class="card-title">{{ guest.full_name }}</h5>
+                              <p class="card-text">
+                                Pre-meet {{ guest.attending_pre_meet }}
+                                Wedding {{ guest.attending_wedding }}
+                              </p>
+                              <p>
+                                <strong>Starter:</strong> {{ guest.starter }}
+                                <strong>Main:</strong> {{ guest.main }}
+                                <strong>Dessert:</strong> {{ guest.dessert }}
+                              </p>
+                              <a class="btn btn-default btn-sm">Edit Guest</a>
+                              <a class="btn btn-danger btn-sm">Delete Guest</a>
+                            </div>
+                        </div>
+                            {% endfor %}  
+                    </div>
+                        {% endif %}
+            </form>
+        </div>
+    </div>
     {% endif %}
 
 {% endblock %}
