--- a/templates/view_rsvp.html
+++ b/templates/view_rsvp.html
@@ -32,31 +32,39 @@
                 </div>
             </div>
         </div>
-        <div class="row d-flex flex-row">
+        <div class="row d-flex justify-content-center">
             <form action="{{ url_for('view_rsvp', guest_id=guest_id, user_id=user_id)}}" method="POST" class="row">
-                <div class="col mb-4 text-dark justify-content-start" id="">
+                <div class="col text-dark" id="">
                     {% if count_guests >= 1 %}
-                    <div class="card-deck">
                         {% for guest in guests %}
                         <div class="card">
                             <div class="card-body">
                               <h5 class="card-title">{{ guest.full_name }}</h5>
-                              <p class="card-text">
-                                Pre-meet {{ guest.attending_pre_meet }}
-                                Wedding {{ guest.attending_wedding }}
-                              </p>
                               <p>
-                                <strong>Starter:</strong> {{ guest.starter }}
-                                <strong>Main:</strong> {{ guest.main }}
-                                <strong>Dessert:</strong> {{ guest.dessert }}
+                                {% if guest.attending_pre_meet == "on" %}
+                                    Pre-meet<i class="fas fa-check-circle text-success guest-card-i tooltipped" data-position="right" data-tooltip="Attending"></i>
+                                    {% else %}
+                                        Pre-meet<i class="fas fa-times-circle text-danger guest-card-i tooltipped" data-position="right" data-tooltip="Not attending"></i>
+                                {% endif %}
+                                {% if guest.attending_wedding == "on" %}
+                                    Wedding<i class="fas fa-check-circle text-success guest-card-i tooltipped" data-position="right" data-tooltip="Attending"></i>
+                                    {% else %}
+                                        Wedding<i class="fas fa-times-circle text-danger guest-card-i tooltipped" data-position="right" data-tooltip="Not attending"></i>
+                                {% endif %}
+                            </p>
+                              <p class="card-text">
+                                <strong>Starter:</strong> {{ guest.starter }}<br>
+                                <strong>Main:</strong> {{ guest.main }}<br>
+                                <strong>Dessert:</strong> {{ guest.dessert }}<br>
                               </p>
                               <a class="btn btn-default btn-sm">Edit Guest</a>
                               <a class="btn btn-danger btn-sm">Delete Guest</a>
                             </div>
                         </div>
                             {% endfor %}  
-                    </div>
+                    
                         {% endif %}
+                </div>
             </form>
         </div>
     </div>
