Remove card card-image classes from hero on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <!-- Jumbotron -->
-    <section class="card card-image hero-image">
+    <section class="hero-image">
         <div class="text-white text-center py-5 px-4">
             <div class="py-5">
         
