Refactor base.html. Create new folders and files to organise code

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% include "layout/head.html" %}
+{% include "layout/navbar.html" %}
+{% include "components/messages.html" %}
+{% include "layout/scripts.html" %}
 {% block content %}
 
     <!-- Jumbotron -->
@@ -114,5 +118,5 @@
             </div>
         </div>
     </section>
-
+    {% include "layout/footer.html" %}
 {% endblock %}
