--- a/templates/base.html
+++ b/templates/base.html
@@ -1,159 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- insert meta data -->
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" type="text/css">
-    <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" type="text/css">
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet" type="text/css">
-    <!-- SmartWizard -->
-    <link href="https://cdn.jsdelivr.net/npm/smartwizard@5/dist/css/smart_wizard_all.min.css" rel="stylesheet" type="text/css" />
-    <!-- Static CSS stylesheet -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    {% block styles %}
-    {% endblock %}
-    <title>Bizzy & Chris Wedding</title>
+    {% include 'layout/head.html' %}
 </head>
 <body>
-
-    <header>
-                <!--Navbar -->
-        <nav class="mb-1 navbar navbar-expand-lg navbar-dark text-shadow">
-            <a class="navbar-brand" href="/"><i class="fas fa-heart"></i></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
-            aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Dates</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="/#info">Info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Wedding Party</a>
-                        </li>
-                    <li class="nav-item dropdown">
-                    <a id="demo-dropdown" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">Demo
-                    </a>
-                    <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-                        <a class="dropdown-item" href="#">Custom 404 error</a>
-                        <a class="dropdown-item" href="#">Custom 500 error</a>
-                    </div>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto nav-flex-icons">
-                    <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="{{ url_for('create_account') }}">
-                        <button type="button" class="btn btn-warning btn-sm text-shadow">RSVP</button>
-                    </a>
-                    </li>
-                    <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-user"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right dropdown-default"
-                        aria-labelledby="navbarDropdownMenuLink-333">
-                        {% if session.user_id %}
-                            <a class="dropdown-item" href="{{ url_for('view_rsvp', user_id=session['user_id']) }}">View RSVP</a>
-                            <a class="dropdown-item" href="{{ url_for('add_guest', user_id=session['user_id']) }}">Add Guest</a>
-                            <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
-                        {% else %}
-                            <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
-                        {% endif %}
-                    </div>
-                    </li>
-                </ul>
-            </div>
-
-        </nav>
-    </header>
-
-    <section>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="row flashes">
-                        <h4>{{ message }}</h4>
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-    </section>
-
     <main>
-        {% block content %}
+        {% block content %} 
         {% endblock %}
     </main>
-
-    <!-- Footer -->
-<footer class="page-footer font-small teal pt-4">
-
-    <!-- Footer Text -->
-    <div class="container-fluid text-center text-md-left">
-  
-      <!-- Grid row -->
-      <div class="row text-center">
-        <!-- Grid column -->
-        <div class="col-md-12 mt-md-0">
-            <h5 class="font-weight-bold ">Need to get in touch?</h5>
-        </div>
-        <!-- Grid column -->
-        <div class="col-md-6 mt-md-0 mt-3">
-  
-          <!-- Content -->
-            <p>
-              <i class="fas fa-phone"></i> +44 (0)1234 56789
-            </p>
-  
-        </div>
-        <!-- Grid column -->
-  
-        <hr class="clearfix w-100 d-md-none pb-3">
-  
-        <!-- Grid column -->
-        <div class="col-md-6 mb-md-0 mb-3">
-  
-          <!-- Content -->
-          <p>
-            <i class="fas fa-envelope"></i> bizandchris@wedding.com
-          </p>
-  
-        </div>
-        <!-- Grid column -->
-  
-      </div>
-      <!-- Grid row -->
-  
-    </div>
-    <!-- Footer Text -->
-  
-  </footer>
-  <!-- Footer -->
-
-    <!-- JQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <!-- Materialize Design Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
-    <!-- SmartWizard -->
-    <script src="https://cdn.jsdelivr.net/npm/smartwizard@5/dist/js/jquery.smartWizard.min.js" type="text/javascript"></script>
-    <!-- Static JS -->
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    {% block scripts %}
-    {% endblock %}
+    {% include 'layout/scripts.html' %}
 </body>
 </html>
