--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
         {% block content %} 
         {% endblock %}
     </main>
+    {% include 'layout/footer.html' %}
     {% include 'layout/scripts.html' %}
 </body>
 </html>
