Add navbar.html to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     {% include 'layout/head.html' %}
 </head>
+{% include 'layout/navbar.html' %}
 <body>
     <main>
         {% block content %} 
