Refactor login and register forms into auth.html. Update login and register functions.

--- a/templates/home.html
+++ b/templates/home.html
@@ -113,7 +113,7 @@
                 </p>
             </div>
             <div class="col-md-6 col-sm-12">
-                <a class="btn peach-gradient" href="{{ url_for('create_account') }}">RSVP now!</a>
+                <a class="btn peach-gradient" href="{{ url_for('register') }}">RSVP now!</a>
             </div>
         </div>
     </section>
