--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -29,7 +29,7 @@ aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Tog
     </ul>
     <ul class="navbar-nav ml-auto nav-flex-icons">
         <li class="nav-item">
-        <a class="nav-link waves-effect waves-light" href="{{ url_for('create_account') }}">
+        <a class="nav-link waves-effect waves-light" href="{{ url_for('register') }}">
             <button type="button" class="btn btn-warning btn-sm text-shadow">RSVP</button>
         </a>
         </li>
