--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -41,7 +41,7 @@ aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Tog
         <div class="dropdown-menu dropdown-menu-right dropdown-default"
             aria-labelledby="navbarDropdownMenuLink-333">
             {% if session.user_id %}
-                <a class="dropdown-item" href="{{ url_for('view_rsvp', user_id=session['user_id']) }}">View RSVP</a>
+                <a class="dropdown-item" href="{{ url_for('dashboard', user_id=session['user_id']) }}">View RSVP</a>
                 <a class="dropdown-item" href="{{ url_for('add_guest', user_id=session['user_id']) }}">Add Guest</a>
                 <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
             {% else %}
