--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "layout/base.html" %}
 {% block content %}
 
-    {% if count_guests == 0 %}
+    <!-- {% if count_guests == 0 %}
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    {% else %}
+    {% else %} -->
     <div class="container">
         <div class="row">
             <div class="col s12">
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="row d-flex justify-content-center">
-            <form action="{{ url_for('view_rsvp', guest_id=guest_id, user_id=user_id)}}" method="POST" class="row">
+            <form action="{{ url_for('dashboard', guest_id=guest_id, user_id=user_id)}}" method="POST" class="row">
                 <div class="col text-dark" id="">
                     {% if count_guests >= 1 %}
                         {% for guest in guests %}
@@ -68,6 +68,6 @@
             </form>
         </div>
     </div>
-    {% endif %}
+    <!-- {% endif %} -->
 
 {% endblock %}
