Change name of add_guest.html. Remove unused variables from register function.

--- a/templates/components/forms/add-guest.html
+++ b/templates/components/forms/add-guest.html
@@ -25,7 +25,7 @@
         <p class="h5 mb-4">If you're attending the wedding, please select your food options. Otherwise, please select "Not required":</p>
 
         <label>Starter</label>
-        <select id="starter" name="starter" class="browser-default custom-select mb-4">
+        <select id="starter" name="starter" class="browser-default custom-select mb-4" required>
             <option value="Choose your starter" selected>Choose your starter</option>
             <option value="Not required">Not required</option>
             {% for starter in food_choices %}
@@ -34,7 +34,7 @@
         </select>
 
         <label>Main</label>
-        <select id="main" name="main" class="browser-default custom-select mb-4">
+        <select id="main" name="main" class="browser-default custom-select mb-4" required>
             <option value="Choose your main" selected>Choose your main</option>
             <option value="Not required">Not required</option>
             {% for main in food_choices %}
@@ -43,7 +43,7 @@
         </select>
 
         <label>Dessert</label>
-        <select id="dessert" name="dessert" class="browser-default custom-select mb-4">
+        <select id="dessert" name="dessert" class="browser-default custom-select mb-4" required>
             <option value="Choose your dessert" selected>Choose your dessert</option>
             <option value="Not required">Not required</option>
             {% for dessert in food_choices %}
