--- a/templates/components/forms/authentication.html
+++ b/templates/components/forms/authentication.html
@@ -29,7 +29,11 @@
                 {% endif %}
                 <div class="col d-flex justify-content-center">
                     <button class="btn btn-info my-4" type="submit">
-                        {% if register == True %} Register now {% else %} Sign In {% endif %}
+                        {% if register == True %} 
+                            Register now 
+                        {% else %} 
+                            Sign In 
+                        {% endif %}
                     </button>
                 </div>
                 <div class="col text-center">
