--- a/templates/components/forms/guest-details.html
+++ b/templates/components/forms/guest-details.html
@@ -59,10 +59,10 @@
             </select>
             <div class="col d-flex justify-content-center">
                 <button class="btn btn-info my-4" type="submit">
-                    {% if register == True %} 
-                        Register now 
+                    {% if add == True %} 
+                        Add Guest
                     {% else %} 
-                        Sign In 
+                        Edit Guest
                     {% endif %}
                 </button>
             </div>
