--- a/templates/components/forms/guest-details.html
+++ b/templates/components/forms/guest-details.html
@@ -4,7 +4,7 @@
 {% if add == True %}
     <form class="border border-light p-5" action="{{ url_for('add_guest', user_id=user_id ) }}" method="POST" > 
 {% else %}
-    <form class="border border-light p-5" action="{{ url_for('edit_guest', guest_id=guest_id , user_id=user_id) }}" method="POST"> 
+    <form class="border border-light p-5" action="{{ url_for('edit_guest', guest_id=guest_id) }}" method="POST"> 
 {% endif %}
     <div class="row">
         <div class="col-md-8 mx-auto border border-light p-5">
