--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -57,7 +57,7 @@
                                 <strong>Main:</strong> {{ guest.main }}<br>
                                 <strong>Dessert:</strong> {{ guest.dessert }}<br>
                               </p>
-                              <a href="{{ url_for('edit_guest', guest_id=guest_id) }}" class="btn btn-default btn-sm">Edit Guest</a>
+                              <a href="{{ url_for('edit_guest', guest_id=guest._id) }}" class="btn btn-default btn-sm">Edit Guest</a>
                               <a href="" class="btn btn-danger btn-sm">Delete Guest</a>
                             </div>
                         </div>
