--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -58,7 +58,7 @@
                                 <strong>Dessert:</strong> {{ guest.dessert }}<br>
                               </p>
                               <a href="{{ url_for('edit_guest', guest_id=guest._id) }}" class="btn btn-default btn-sm">Edit Guest</a>
-                              <a href="" class="btn btn-danger btn-sm">Delete Guest</a>
+                              <a href="{{ url_for('delete_guest', guest_id=guest._id, user_id=user_id) }}" class="btn btn-danger btn-sm">Delete Guest</a>
                             </div>
                         </div>
                             {% endfor %}  
