--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -3,6 +3,7 @@
 
     {% if count_guests == 0 %}
     <div class="container">
+        {% include 'components/messages/messages.html' %}
         <div class="row">
             <div class="col-12">
                 <div class="card center-align text-dark">
@@ -24,6 +25,7 @@
 
     {% else %}
     <div class="container">
+        {% include 'components/messages/messages.html' %}
         <div class="row">
             <div class="col s12">
                 <div class="">
