--- a/templates/components/modals/delete-guest.html
+++ b/templates/components/modals/delete-guest.html
@@ -1,19 +1,23 @@
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="deleteGuest"
+<div class="modal fade delete-guest-modal" id="guest-modal-{{ guest._id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
   aria-hidden="true">
-  <div class="modal-dialog modal-sm" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title w-100">Delete Guest</h4>
+        <h5 class="modal-title" id="exampleModalLongTitle">Delete Guest</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        Are you sure you want to permanently delete <span>{{guest.full_name}}</span>?
+        Are you sure you wish to permanently delete {{ guest.full_name }}? 
       </div>
       <div class="modal-footer">
-        <button href="{{ url_for('dashboard', user_id=user_id) }}" type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Go Back</button>
-        <button href="{{ url_for('delete_guest', guest_id=guest_id, user_id=user_id) }}" type="button" class="btn btn-primary btn-sm">Delete Guest</button>
+        <button href="{{ url_for('dashboard', user_id=user_id) }}" type="button" class="btn btn-secondary" data-dismiss="modal">
+          Go Back
+        </button>
+        <button href="{{ url_for('delete_guest', guest_id=guest._id, user_id=user_id) }}" type="button" class="btn btn-primary">
+          Delete Guest
+        </button>
       </div>
     </div>
   </div>
