Add href to navbar links

--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -9,10 +9,10 @@ aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Tog
 <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-        <a class="nav-link" href="#">Dates</a>
+        <a class="nav-link" href="#dates-section">Dates</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="/#info">Info</a>
+        <a class="nav-link" href="#info-section">Info</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Wedding Party</a>
