--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -19,7 +19,7 @@
     </section>
 
     <!-- Dates  -->
-    <section class="container">
+    <section id="dates-section" class="container">
         <div class="row justify-content-center">
             <div class="col-12">
                 <h2 class="header">Dates</h2>
@@ -57,7 +57,7 @@
     
     <!-- Info  --> 
 
-    <section class="container">
+    <section id="info-section" class="container">
         <div class="row justify-content-center">
             <div class="col-12">
                 <h2 class="header">Info</h2>
