Add aria label to buttons

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -81,11 +81,12 @@
                 <i class="fas fa-gift"></i>
                 <p>Your presence is the greatest gift of all! However, should you wish 
                     to help us celebrate with a gift, we ask that you contribute to our 
-                    <a href="https://www.honeyfund.com/wedding/allen-day-09-14-2021">Honeyfund</a>.
+                    <a href="https://www.honeyfund.com/wedding/allen-day-09-14-2021" aria-label="Bizzy and Chris's registry list"
+                    target="_blank" rel="noopener">Honeyfund</a>.
                 </p>
             </div>
             <div class="col-md-6 col-sm-12">
-                <a class="btn peach-gradient" href="#">Meet the Wedding Party</a>
+                <a class="btn peach-gradient" href="#" aria-label="Wedding Party">Meet the Wedding Party</a>
             </div>
         </div>
     </section>
