Add wedding party page and data

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -86,7 +86,7 @@
                 </p>
             </div>
             <div class="col-md-6 col-sm-12">
-                <a class="btn peach-gradient" href="#" aria-label="Wedding Party">Meet the Wedding Party</a>
+                <a class="btn peach-gradient" href="{{ url_for('wedding_party') }}" aria-label="Wedding Party">Meet the Wedding Party</a>
             </div>
         </div>
     </section>
