--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -15,7 +15,7 @@ aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Tog
         <a class="nav-link" href="/#info-section">Info</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Wedding Party</a>
+            <a class="nav-link" href="{{ url_for('wedding_party') }}">Wedding Party</a>
             </li>
         <li class="nav-item dropdown">
         <a id="demo-dropdown" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
