--- a/templates/pages/wedding-party.html
+++ b/templates/pages/wedding-party.html
@@ -1,11 +1,14 @@
 {% extends "layout/base.html" %}
 {% block content %}
-
-    <h2>Meet the Wedding Party</h2>
+    <div class="row">
+        <div class="col-12">
+            <h2 id="wedding-party">Meet the Wedding Party</h2>
+        </div>
+    </div>
 
     {% for member in wedding_party %}
 
-        <div class="row featurette">
+        <div class="row">
 
             {% if loop.index % 2 != 0 %}
 
@@ -15,13 +18,13 @@
                     <p>{{ member.description }}</p>
                 </div>
                 <div class="col-md-5">
-                    <img src="{{ member.image_source }}" alt="{{ member.alt_text }}" class="featurette-image image-responsive">
+                    <img src="{{ member.image_source }}" alt="{{ member.alt_text }}" class="">
                 </div>
-            
+                
             {% else %}
 
                 <div class="col-md-5">
-                    <img src="{{ member.image_source }}" alt="{{ member.alt_text }}" class="featurette-image image-responsive">
+                    <img src="{{ member.image_source }}" alt="{{ member.alt_text }}" class="">
                 </div>
                 <div class="col-md-7">
                     <h3>{{ member.name }}</h3>
@@ -35,10 +38,16 @@
 
         {% if loop.index != loop.length %}
 
-            <hr class="featurette-divider">
+            <hr class="">
 
         {% endif %}
 
     {% endfor %}
+    
+    <div class="row">  
+        <div class="col-12">
+            <h5><a href="#wedding-party" class="text-center">Back to top</a></h5>
+        </div>
+    </div>
 
 {% endblock %}
