--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -1,6 +1,27 @@
 {% extends "layout/base.html" %}
 {% block content %}
 
+<h3 class="center-align">{{ username }}</h3>
+
+    <div class="row card-panel">
+        <form action="{{ url_for('search') }}" method="post" class="col s12">
+            <div class="row center-align">
+                <div class="input-field col">
+                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                    <input type="text" name="query" id="query" minlength="3" class="validate" placeholder="Search guests" required>
+                </div>
+                <div class="col">
+                    <a href="{{ url_for('dashboard', user_id=session['user_id']) }}" class="red btn text-shadow">Reset</a>
+                    <button type="submit" class="light-blue darken-1 btn text-shadow">
+                        Search Guest
+                    </button>
+                    <a href="{{ url_for('add_guest', user_id=user_id) }}" title="Add Guest" class="btn btn-warning"
+                    aria-label="Add Guest">Add Guest</a>
+                </div>
+            </div>
+        </form>
+    </div>
+
     {% if count_guests == 0 %}
     <div class="container">
         {% include 'components/messages/messages.html' %}
@@ -26,14 +47,7 @@
     {% else %}
     <div class="container">
         {% include 'components/messages/messages.html' %}
-        <div class="row">
-            <div class="col s12">
-                <div class="">
-                    <a href="{{ url_for('add_guest', user_id=user_id) }}" title="Add Guest" class=""
-                        aria-label="Add Guest">Add Guest</a>
-                </div>
-            </div>
-        </div>
+        
         <div class="row d-flex justify-content-center">
             <form action="{{ url_for('dashboard', guest_id=guest_id, user_id=user_id)}}" method="POST" class="row">
                 <div class="col text-dark" id="">
